[package]
name = "eracer-config"
version = "1.0.0"
edition = "2021"
authors = ["Vitaliy Busko <vitaliy.opensource@gmail.com>"]
license = "MIT"
description = "Utility that add support high resolution and widescreen to e-Racer game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
registry = "1.2.1"
clap = { version = "3.0.14", features = ["derive"] }
sha2 = "0.10.1"
